--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
     <h1>Sitezinho do pygame</h1>
     <h2>Pokemon</h2>
     <h3>João Lucas e Marcelo</h3>
-    <h3>Branch do minigame</h3>
+    <h3>Branch do soos</h3>
 </body>
 </html>
