--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,32 @@
     <title>Sitezinho do pygame</title>
 </head>
 <body>
-    <h1>Sitezinho do pygame</h1>
-    <h2>Pokemon</h2>
-    <h3>João Lucas e Marcelo</h3>
-    <h3>Branch do soooooos</h3>
+    <header>
+
+    </header>
+
+    <section>
+        Infos basicas
+    </section>
+
+    <section>
+        video Do jogo
+    </section>
+
+    <section>
+        download
+    </section>
+
+    <section>
+        logs
+    </section>
+    
+    <section>
+        Heuristica
+    </section>
+
+    <footer>
+        Foooter
+    </footer>
 </body>
 </html>
