--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     <header>
+        <div>
+            <img src="./assets/raposa.png" alt="raposa loka">
+        </div>
 
+        <div id="div-botoes">
+            <h3>Heurística</h3>
+            <h3>Download</h3>
+            <h3>Dev Logs</h3>
+        </div>
     </header>
 
     <section>
@@ -25,7 +33,7 @@
     </section>
 
     <section>
-        logs
+        
     </section>
     
     <section>
